--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       margin: 0;
       padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #ffffff;
-      color: #000000;
+      background: #D5CABC;
+      color: #271408;
       min-height: 100%;
       width: 100%;
       overflow-x: hidden;
